@@ -118,12 +118,7 @@ my $builder = $class->new(
                 'Class::Accessor'                 => '0.31',
                 'Class::Load'                     => 0,
                 'Class::Std'                      => '0.0.8',
-                'ClearPress::controller'          => '300',
-                'ClearPress::decorator'           => '279',
-                'ClearPress::model'               => '300',
-                'ClearPress::util'                => '300',
-                'ClearPress::view'                => '300',
-                'ClearPress::view::error'         => '279',
+                'ClearPress'                      => '== 473.0.5',
                 'Config::Auto'                    => 0,
                 'Crypt::CBC'                      => 0,
                 'Cwd'                             => 0,
