@@ -1,6 +1,7 @@
 LIST OF CHANGES
 
  - simple uptime report for Illumina sequencing instruments
+ - ClearPress library is pinned to v. 473.0.5
 
 release 85.6
  - code and tests changes to reduce number of warnings under Perl 5.22.2
